.internal/Day-1/network-policies/allow-article-service-to-mongodb.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-article-service-to-mongodb
  namespace: application
spec:
  podSelector:
    matchLabels:
      app: microservices-demo
      component: mongodb
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: microservices-demo
          component: article-service
    ports:
    - protocol: TCP
      port: 27017
